2008-11-25  Michal Ludvig  <michal@logix.cz>

	* upload-to-sf.sh: Helper script.
	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre2+svn

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre2
	  ------------------------

	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre2
	* NEWS: Added 0.9.9-pre2

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd, s3cmd.1, S3/S3.py: Display or don't display progress meter
	  default depends on whether we're on TTY (console) or not.

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Fixed 'get' conflict.
	* s3cmd.1, TODO: Document 'mv' command.

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py, s3cmd, S3/Config.py, s3cmd.1: Added --continue for
	  'get' command, improved 'get' failure resiliency.
	* S3/Progress.py: Support for progress meter not starting in 0.
	* S3/S3.py: improved retrying in send_request() and send_file()

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, NEWS: "s3cmd mv" for moving objects

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py: Common XML parser.
	* s3cmd, S3/Exeptions.py: Print info message on Error.

2008-11-21  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Support for 'cp' command.
	* S3/S3.py: Added S3.object.copy() method.
	* s3cmd.1: Document 'cp' command.
	* NEWS: Let everyone know ;-)
	Thanks Andrew Ryan for a patch proposal!
	https://sourceforge.net/forum/forum.php?thread_id=2346987&forum_id=618865

2008-11-17  Michal Ludvig  <michal@logix.cz>

	* S3/Progress.py: Two progress meter implementations.
	* S3/Config.py, s3cmd: New --progress / --no-progress parameters
	  and Config() members.
	* S3/S3.py: Call Progress() in send_file()/recv_file()
	* NEWS: Let everyone know ;-)

2008-11-16  Michal Ludvig  <michal@logix.cz>

	* NEWS: Fetch 0.9.8.4 release news from 0.9.8.x branch.

2008-11-16  Michal Ludvig  <michal@logix.cz>

	Merge from 0.9.8.x branch, rel 251: